# faf-example

./: .gitignore  Cargo.toml  README.md  compile.sh  compile_no_flags.sh  faf.dockerfile  run.sh  start.sh  stop.sh
docker/: faf-debian.dockerfile
src/: main.rs
