[package]
name = "faf-ex"
version = "0.2.0"
authors = ["James Bates <errantmind@protonmail.com>"]
edition = "2021"

[profile.dev]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
panic = 'abort'
codegen-units = 1
lto = "thin"
debug = false
overflow-checks = false

[dependencies]
mimalloc = { version = "*", default-features = false }
faf = { path = "/home/errant/dev/projects/faf-epoll" } #, features = ["faf_debug"] }
