[package]
name = "faf-ex"
version = "0.2.1"
authors = ["James Bates <errantmind@protonmail.com>"]
edition = "2021"


[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[profile.release]
opt-level = 3
panic = 'abort'
codegen-units = 1
lto = "thin"
debug = false
incremental = false
overflow-checks = false

[dependencies]
faf = { git = "https://github.com/errantmind/faf.git" } #, features = ["faf_debug"] }
#faf = { path = "/home/errant/dev/projects/faf" } #, features = ["faf_debug"] }
